# qwen3-tts-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.ru.md
examples/: voice_design_cli_example.cpp  voice_design_full_profile_example.cpp  voice_design_timing_example.cpp
src/: tokenizer.cpp  tokenizer.h  utils.cpp  utils.h  voice.cpp  voice.h
